math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__group_followed.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x+y} b"
---
1: Letter('x')
2: BinaryOp(Bin('+'))
3: Letter('y')
4: GroupEnd
