math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__group_with_begin.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{\\begin{matrix}}"
---
1: Begin
7: EnvName(Matrix)
