math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__missing_brace.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "\\begin x + y"
---
Error at 7: UnknownEnvironment("x")
