math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__number_with_dot.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "3.14"
---
0: Digit(Three)
1: Letter('.')
2: Digit(One)
3: Digit(Four)
