math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__number_with_dot_at_end.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: 3.14.
---
0: Digit('3')
1: Letter('.')
2: Digit('1')
3: Digit('4')
4: Letter('.')
