math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__number_with_two_inner_dots.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: 3..14
---
0: Digit(Three)
1: Letter('.')
2: Letter('.')
3: Digit(One)
4: Digit(Four)
