math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__parsing_custom_commands.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "\\frac{#1}{#2} + \\sqrt{#3}"
---
0: Frac(None)
5: GroupBegin
6: CustomCmdArg(0)
8: GroupEnd
9: GroupBegin
10: CustomCmdArg(1)
12: GroupEnd
14: BinaryOp(Bin('+'))
16: Sqrt
21: GroupBegin
22: CustomCmdArg(2)
24: GroupEnd
