math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__simple_expression.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: x+y
---
0: Letter('x')
1: BinaryOp(Bin { char: '+', cat: BD })
2: Letter('y')
