math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__simple_group.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "{x+y}"
---
1: Letter('x')
2: BinaryOp(Bin { char: 43, cat: BD })
3: Letter('y')
