math-core/src/latex_parser/snapshots/math_core__latex_parser__lexer__tests__space_and_number.snap
---
source: math-core/src/latex_parser/lexer.rs
expression: "\\ 1"
---
0: NonBreakingSpace
2: Digit('1')
